--- a/.github/workflows/JeskeiMediaFunctions20220705210441.yml
+++ b/.github/workflows/JeskeiMediaFunctions20220705210441.yml
@@ -24,6 +24,9 @@ jobs:
       run: dotnet build "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-restore
     - name: Publish
       run: dotnet publish "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-build --output "${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}"
+    - uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
     - name: Deploy to Azure Function App
       uses: Azure/functions-action@v1
       with:
